--- a/core/templates/backend/carousel.html
+++ b/core/templates/backend/carousel.html
@@ -51,154 +51,13 @@
                     </tr>
                     </thead>
                     <tbody id="tbody_carousel">
-{#                                            {% for c in cs %}#}
-{##}
-{#{% table_carousels title=c.title img=c.img caption=c.caption link=c.link dimdate=c.dimDate%}#}
-{#                                            {% endfor %}#}
                     </tbody>
                 </table>
             </div>
-            {% if CPNs != None %}
-                {% for cpn in CPNs %}
-                    <div aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="update_{{ cpn.id }}" class="modal fade">
-                        <div role="document" class="modal-dialog">
-
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button aria-label="Close" data-dismiss="modal" class="close" type="button"><span aria-hidden="true">×</span></button>
-                                    <h4 id="myModalLabel" class="modal-title">企业注册详情</h4>
-                                </div>
-
-                                <div class="modal-body">
-                                    <form class="form-horizontal" method="POST" action="/admin/cpn">
-
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">企业名称:</label>
-                                            <div class="col-xs-12 col-sm-12">
-                                                <div class="clearfix"><input type="text" name="name" value="{{ cpn.Name }}" class="col-xs-12 col-sm-12"></div>
-                                                <input type="hidden" name="id" value="{{ cpn.id }}">
-                                            </div>
-
-                                        </div>
-
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">办公地址:</label>
-                                            <div class="col-xs-12 col-sm-12">
-                                                <div class="clearfix"><input type="text" name="adr" value="{{ cpn.Adr }}" class="col-xs-12 col-sm-12"></div>
-                                            </div>
-
-
-                                        </div>
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">办公电话:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" name="tel" value="{{ cpn.Tel }}" class="col-xs-12 col-sm-12"></div>
-                                            </div>
-                                            <label class="control-label col-xs-12 col-sm-3 no-padding-right">企业IT系统类型:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" name="cpnittp" value="{{ cpn.Cpnittp }}" class="col-xs-12 col-sm-12"></div>
-                                            </div>
-                                        </div>
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">城市:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" name="city" value="{{ cpn.City }}" class="col-xs-12 col-sm-12"></div>
-                                            </div>
-                                            <label class="control-label col-xs-12 col-sm-3 no-padding-right">传真:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" name="fax" value="{{ cpn.Fax }}" class="col-xs-12 col-sm-12"></div>
-                                            </div>
-                                        </div>
-
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">开户行:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" name="opnbnk" value="{{ cpn.OpnBnk }}" class="col-xs-12 col-sm-12"></div>
-                                            </div>
-                                            <label class="control-label col-xs-12 col-sm-3 no-padding-right">帐号:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" name="actno" value="{{ cpn.actno }}" class="col-xs-12 col-sm-12"></div>
-                                            </div>
-                                        </div>
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">税号:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix">
-                                                    <input type="text" class="col-xs-12 col-sm-12" value="{{ cpn.TaxID }}" name="taxid" />
-                                                </div>
-                                            </div>
-                                            <label class="control-label col-xs-12 col-sm-3 no-padding-right">联系人:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" class="col-xs-12 col-sm-12" value="{{ cpn.Lnkr }}" name="lnkr"></div>
-                                            </div>
-                                        </div>
-
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">联系人电话:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" class="col-xs-12 col-sm-12" value="{{ cpn.LnkPhn }}" name="lnkphn"/></div>
-                                            </div>
-                                            <label class="control-label col-xs-12 col-sm-3 no-padding-right">联系人邮箱:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix">
-                                                    <input type="text" class="col-xs-12 col-sm-12" name="lnkeml" value="{{ cpn.LnkEml }}">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">财务负责人:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix">
-                                                    <input type="text" class="col-xs-12 col-sm-12" name="cfo" value="{{ cpn.Cfo }}">
-                                                </div>
-                                            </div>
-                                            <label class="control-label col-xs-12 col-sm-3 no-padding-right">财务联系电话:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" class="col-xs-12 col-sm-12" name="cfophn" value="{{ cpn.CfoPhn }}"></div>
-                                            </div>
-                                        </div>
-
-                                        <div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">管理员:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" class="col-xs-12 col-sm-12" name="cio" value="{{ cpn.Cio }}"></div>
-                                            </div>
-                                            <label class="control-label col-xs-12 col-sm-3 no-padding-right">管理员电话:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" class="col-xs-12 col-sm-12" name="ciophn" value="{{ cpn.CioPhn }}"></div>
-                                            </div>
-                                        </div><div class="space-2"></div>
-                                        <div class="form-group">
-                                            <label class="control-label col-xs-12 col-sm-2 no-padding-right">管理邮箱:</label>
-                                            <div class="col-xs-12 col-sm-3">
-                                                <div class="clearfix"><input type="text" class="col-xs-12 col-sm-12" name="cioeml" value="{{ cpn.CioEml }}"></div>
-                                            </div>
-                                        </div>
-
-                                </div>
-                                <div class="modal-footer">
-                                    <button data-dismiss="modal" class="btn btn-default" type="button">关闭</button>
-                                    <button class="btn btn-primary" type="submit">保存</button>
-                                </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            {% endif %}
 
 
             <div aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="add" class="modal fade">
-                <div role="document" class="modal-dialog">
+                <div role="document" class="modal-dialog" >
                     <div class="modal-content">
                         <div class="modal-header">
                             <button aria-label="Close" data-dismiss="modal" class="close" type="button"><span aria-hidden="true">×</span></button>
@@ -232,8 +91,15 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <div class="col-xs-12">
-                                        <input type="file" name="img" id="id-input-file-2" />
+                                <label class="control-label col-xs-2 col-sm-2 no-padding-right">轮播主图片:</label>
+                                    <div class="col-xs-9 col-sm-9">
+                                    <select class="chosen-select form-control" name="pid" id="picselect" data-placeholder="">
+
+
+                                        {% for p in ps %}
+<option value="{{ p.id }}">{{ p.title }}</option>
+                                        {% endfor %}
+	</select>
                                     </div>
                                 </div>
 
@@ -327,6 +193,55 @@ var csrftoken = getCookie('csrftoken');
                                             }
                                         });
 
+                                    }function edit(e) {
+
+
+                                        NProgress.start();
+                                        var formData = new FormData($( "#editform_"+e )[0]);
+                                        $.ajax({
+                                            url: "/r/carousel",
+                                            type: "POST",
+                                            data: formData,
+                                            /**
+                                             *必须false才会自动加上正确的Content-Type
+                                             */
+                                            enctype:"multipart/form-data",
+                                            contentType: false,
+                                            /**
+                                             * 必须false才会避开jQuery对 formdata 的默认处理
+                                             * XMLHttpRequest会对 formdata 进行正确的处理
+                                             */
+                                            processData: false,
+                                            success: function (data) {
+                                                data=JSON.parse(data);
+                                                if (data.status == "200") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '成功上传',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: '成功添加新的轮播项。'+data.msg,
+                                                        class_name: 'gritter-success'
+                                                    });
+                                                    ajax_refresh_table();
+                                                    $('.modal-backdrop.fade.in').remove();
+                                                }
+                                                if (data.status == "500") {
+                                                    $.gritter.add({
+                                                        // (string | mandatory) the heading of the notification
+                                                        title: '失败',
+                                                        // (string | mandatory) the text inside the notification
+                                                        text: data.msg,
+                                                        class_name: 'gritter-warning'
+                                                    });
+                                                }
+                                                NProgress.done();
+                                            },
+                                            error: function () {
+                                                alert("上传失败！");
+                                                NProgress.done();
+                                            }
+                                        });
+
                                     }
                                 </script>
                             </form>
@@ -341,18 +256,6 @@ var csrftoken = getCookie('csrftoken');
         </div>
         <script>
             $('#li_carousel').attr('class','active');
-            $('#id-input-file-2').ace_file_input({
-                no_file:'无文件 ...',
-                btn_choose:'选择',
-                btn_change:'重选',
-                droppable:false,
-                onchange:null,
-                thumbnail:false //| true | large
-                //whitelist:'gif|png|jpg|jpeg'
-                //blacklist:'exe|php'
-                //onchange:''
-                //
-            });
             function  ajax_refresh_table() {
 $('#tbody_carousel').html('');
 NProgress.start();
