--- a/core/templates/backend/master_admin.html
+++ b/core/templates/backend/master_admin.html
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="{% static "css/nprogress.css"%}">
 		<link rel="stylesheet" href="/static/font-awesome/4.5.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="/static/css/jquery-ui.custom.min.css" />
-		<link rel="stylesheet" href="/static/css/chosen.min.css" />
+
 		<link rel="stylesheet" href="/static/css/bootstrap-datepicker3.min.css" />
 		<link rel="stylesheet" href="/static/css/bootstrap-timepicker.min.css" />
 		<link rel="stylesheet" href="/static/css/daterangepicker.min.css" />
 		<link rel="stylesheet" href="/static/css/bootstrap-datetimepicker.min.css" />
 		<link rel="stylesheet" href="/static/css/bootstrap-colorpicker.min.css" />
+<link rel="stylesheet" href="/static/css/chosen.min.css" />
 <link rel="stylesheet" href="/static/css/colorbox.min.css" />
 <link rel="stylesheet" href="/static/css/jquery.gritter.min.css" />
 		<!-- page specific plugin styles -->
@@ -475,7 +476,7 @@
 <script src="/static/js/jquery.gritter.min.js"></script>
 <script src="/static/js/jquery.cookie.js"></script>
 <script src="/static/js/jquery.colorbox.min.js"></script>
-{#		<script src="/static/js/chosen.jquery.min.js"></script>#}
+		<script src="/static/js/chosen.jquery.min.js"></script>
 {#		<script src="/static/js/spinbox.min.js"></script>#}
 {#		<script src="/static/js/bootstrap-datepicker.min.js"></script>#}
 {#		<script src="/static/js/bootstrap-timepicker.min.js"></script>#}
