--- a/core/templates/user/login.html
+++ b/core/templates/user/login.html
@@ -1,83 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta charset="utf-8" />
-		<title>恒心前途用户中心登录页面</title>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8" />
+    <title>恒心前途用户中心登录页面</title>
 
-		<meta name="description" content="User login page" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/form-elements.css">
+    <link rel="stylesheet" href="/static/css/loginstyle.css">
+</head>
 
-		<!-- bootstrap & fontawesome -->
-		<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="/static/font-awesome/4.5.0/css/font-awesome.min.css" />
-<link rel="stylesheet" href="/static/css/nprogress.css">
-		<!-- text fonts -->
-		<link rel="stylesheet" href="/static/css/fonts.googleapis.com.css" />
+<body class="login-layout light-login ">
+<div class="top-content">
 
-		<!-- ace styles -->
-		<link rel="stylesheet" href="/static/css/ace.min.css" />
+    <div class="inner-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text">
+                    <h1><strong>恒心前途</strong> 登录</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3 form-box">
+                    <div class="form-top">
+                        <div class="form-top-left">
+                            <h3>恒心前途用户中心</h3>
+                        </div>
+                        <div class="form-top-right">
+                            <i class="fa fa-key"></i>
+                        </div>
+                    </div>
+                    <div class="form-bottom">
+                        <form role="form" action="" method="post" class="login-form">
+                            <div class="form-group">
+                                <label class="sr-only" for="form-username">用户名</label>
+                                <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="ipt_username">
+                            </div>
+                            <div class="form-group">
+                                <label class="sr-only" for="form-password">密码</label>
+                                <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="ipt_pwd">
+                            </div>
+                            <button type="button" id="btn_login" class="btn">登录</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-		<!--[if lte IE 9]>
-			<link rel="stylesheet" href="/static/css/ace-part2.min.css" />
-		<![endif]-->
-		<link rel="stylesheet" href="/static/css/ace-rtl.min.css" />
-<link rel="stylesheet" href="/static/css/jquery.gritter.min.css" />
-		<!--[if lte IE 9]>
-		  <link rel="stylesheet" href="/static/css/ace-ie.min.css" />
-		<![endif]-->
+</div>
 
-		<!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
-
-		<!--[if lte IE 8]>
-		<script src="/static/js/html5shiv.min.js"></script>
-		<script src="/static/js/respond.min.js"></script>
-		<![endif]-->
-
-	</head>
-
-	<body class="login-layout light-login ">
-		<div class="main-container" style="margin-top: 100px;">
-			<div class="main-content">
-				<div class="row">
-					<div class="col-sm-10 col-sm-offset-1">
-						<div class="login-container">
-							<div class="center">
-								<h1>
-									<i class="ace-icon fa fa-leaf green"></i>
-									<span class="red">恒心前途</span>
-									<span class="grey" id="id-text2">用户中心系统</span>
-								</h1>
-							</div>
-
-							<div class="space-6"></div>
-
-							<div class="position-relative">
-								<div id="login-box" class="login-box visible widget-box no-border">
-									<div class="widget-body">
-										<div class="widget-main">
-											<h4 class="header blue lighter bigger">
-												<i class="ace-icon fa fa-coffee green"></i>
-												请输入用户信息
-											</h4>
-
-											<div class="space-6"></div>
-
-											<form id="form_login" method="POST" action="">
-                                                {% csrf_token %}
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input id="ipt_username" type="text" class="form-control" name="username" placeholder="Username" />
-															<i class="ace-icon fa fa-user"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input id="ipt_pwd" type="password" class="form-control" name="pwd" placeholder="Password" />
-															<i class="ace-icon fa fa-lock"></i>
-														</span>
-													</label>
+{#    <div class="main-container" style="margin-top: 100px;">#}
+{#			<div class="main-content">#}
+{#				<div class="row">#}
+{#					<div class="col-sm-10 col-sm-offset-1">#}
+{#						<div class="login-container">#}
+{#							<div class="center">#}
+{#								<h1>#}
+{#									<i class="ace-icon fa fa-leaf green"></i>#}
+{#									<span class="red">恒心前途</span>#}
+{#									<span class="grey" id="id-text2">用户中心系统</span>#}
+{#								</h1>#}
+{#							</div>#}
+{##}
+{#							<div class="space-6"></div>#}
+{##}
+{#							<div class="position-relative">#}
+{#								<div id="login-box" class="login-box visible widget-box no-border">#}
+{#									<div class="widget-body">#}
+{#										<div class="widget-main">#}
+{#											<h4 class="header blue lighter bigger">#}
+{#												<i class="ace-icon fa fa-coffee green"></i>#}
+{#												请输入用户信息#}
+{#											</h4>#}
+{##}
+{#											<div class="space-6"></div>#}
+{##}
+{#											<form id="form_login" method="POST" action="">#}
+{#                                                {% csrf_token %}#}
+{#													<label class="block clearfix">#}
+{#														<span class="block input-icon input-icon-right">#}
+{#															<input id="ipt_username" type="text" class="form-control" name="username" placeholder="Username" />#}
+{#															<i class="ace-icon fa fa-user"></i>#}
+{#														</span>#}
+{#													</label>#}
+{##}
+{#													<label class="block clearfix">#}
+{#														<span class="block input-icon input-icon-right">#}
+{#															<input id="ipt_pwd" type="password" class="form-control" name="pwd" placeholder="Password" />#}
+{#															<i class="ace-icon fa fa-lock"></i>#}
+{#														</span>#}
+{#													</label>#}
 {#                                             <label class="block clearfix">#}
 {#														<span class="block input-icon input-icon-right">#}
 {#															<input id="ipt_img" type="text" class="col-xs-8" name="img-verification" placeholder="验证码" />#}
@@ -91,135 +106,130 @@
 {##}
 {##}
 {#                                                 </label>#}
-													<div class="space"></div>
+{#													<div class="space"></div>#}
+{##}
+{#													<div class="clearfix">#}
+{#														<label class="inline">#}
+{#															<input type="checkbox" class="ace" />#}
+{#															<span class="lbl"> 记住密码</span>#}
+{#														</label>#}
+{##}
+{#														<button type="button" id="btn_login" class="width-35 pull-right btn btn-sm btn-primary">#}
+{#															<i class="ace-icon fa fa-key"></i>#}
+{#															<span class="bigger-110">登录</span>#}
+{#														</button>#}
+{#													</div>#}
+{##}
+{#													<div class="space-4"></div>#}
+{#											</form>#}
+{##}
+{#										</div><!-- /.widget-main -->#}
+{##}
+{#									</div><!-- /.widget-body -->#}
+{#								</div><!-- /.login-box -->#}
+{##}
+{##}
+{#							</div><!-- /.position-relative -->#}
+{##}
+{#							<div class="navbar-fixed-top align-right">#}
+{#								<br />#}
+{#								&nbsp;#}
+{#								<a id="btn-login-dark" href="#">Dark</a>#}
+{#								&nbsp;#}
+{#								<span class="blue">/</span>#}
+{#								&nbsp;#}
+{#								<a id="btn-login-blur" href="#">Blur</a>#}
+{#								&nbsp;#}
+{#								<span class="blue">/</span>#}
+{#								&nbsp;#}
+{#								<a id="btn-login-light" href="#">Light</a>#}
+{#								&nbsp; &nbsp; &nbsp;#}
+{#							</div>#}
+{#						</div>#}
+{#					</div><!-- /.col -->#}
+{#				</div><!-- /.row -->#}
+{#			</div><!-- /.main-content -->#}
+{#		</div><!-- /.main-container -->#}
 
-													<div class="clearfix">
-														<label class="inline">
-															<input type="checkbox" class="ace" />
-															<span class="lbl"> 记住密码</span>
-														</label>
+<!-- basic scripts -->
 
-														<button type="button" id="btn_login" class="width-35 pull-right btn btn-sm btn-primary">
-															<i class="ace-icon fa fa-key"></i>
-															<span class="bigger-110">登录</span>
-														</button>
-													</div>
-
-													<div class="space-4"></div>
-											</form>
-
-										</div><!-- /.widget-main -->
-
-									</div><!-- /.widget-body -->
-								</div><!-- /.login-box -->
-
-
-							</div><!-- /.position-relative -->
-
-							<div class="navbar-fixed-top align-right">
-								<br />
-								&nbsp;
-								<a id="btn-login-dark" href="#">Dark</a>
-								&nbsp;
-								<span class="blue">/</span>
-								&nbsp;
-								<a id="btn-login-blur" href="#">Blur</a>
-								&nbsp;
-								<span class="blue">/</span>
-								&nbsp;
-								<a id="btn-login-light" href="#">Light</a>
-								&nbsp; &nbsp; &nbsp;
-							</div>
-						</div>
-					</div><!-- /.col -->
-				</div><!-- /.row -->
-			</div><!-- /.main-content -->
-		</div><!-- /.main-container -->
-
-		<!-- basic scripts -->
-
-		<script src="/static/js/jquery-2.1.4.min.js"></script>
+<script src="/static/js/jquery-2.1.4.min.js"></script>
 <script src="/static/js/jquery.gritter.min.js"></script>
 <script src="/static/js/nprogress.js"></script>
+<script src="/static/js/jquery.backstretch.min.js"></script>
+<!-- inline scripts related to this page -->
+<script type="text/javascript">
 
-		<!-- inline scripts related to this page -->
-		<script type="text/javascript">
 
 
-			//you don't need this, just used for changing background
-			jQuery(function($) {
-			    function getCookie(name) {
-    var cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        var cookies = document.cookie.split(';');
-        for (var i = 0; i < cookies.length; i++) {
-            var cookie = jQuery.trim(cookies[i]);
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
+    //you don't need this, just used for changing background
+    jQuery(function($) {
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = jQuery.trim(cookies[i]);
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
             }
+            return cookieValue;
         }
-    }
-    return cookieValue;
-}
-var csrftoken = getCookie('csrftoken');
-			 $('#btn-login-dark').on('click', function(e) {
-				$('body').attr('class', 'login-layout');
-				$('#id-text2').attr('class', 'white');
-				$('#id-company-text').attr('class', 'blue');
-
-				e.preventDefault();
-			 });
-			 $('#btn_login').on('click', function(e) {
-                NProgress.start();
-                var username=$('#ipt_username').val();
-                var pwd=$('#ipt_pwd').val();
-{#                var img=$('#ipt_img').val();#}
-{#                 'img-verification':img,#}
-                $.post("/u/login",{'username':username,'pwd':pwd,'csrfmiddlewaretoken':csrftoken},
-                    function (data){
-                        data=JSON.parse(data);
-                        if (data.status == "200") {
-                            $.gritter.add({
-                                // (string | mandatory) the heading of the notification
-                                title: '成功',
-                                // (string | mandatory) the text inside the notification
-                                text: data.msg,
-                                class_name: 'gritter-success'
-                            });
-                            location.href='/u/index';
-                        }
-                        else {
-                            $.gritter.add({
-                                // (string | mandatory) the heading of the notification
-                                title: '失败',
-                                // (string | mandatory) the text inside the notification
-                                text:data.status+'|'+ data.msg,
-                                class_name: 'gritter-warning'
-                            });
-                        }
-                        NProgress.done();
-                    });
-
+        var csrftoken = getCookie('csrftoken');
+        $('#btn_login').on('click', function(e) {
+            $(this).find('input[type="text"], input[type="password"], textarea').each(function(){
+                if( $(this).val() == "" ) {
                     e.preventDefault();
-			 });
-			 $('#btn-login-light').on('click', function(e) {
-				$('body').attr('class', 'login-layout light-login');
-				$('#id-text2').attr('class', 'grey');
-				$('#id-company-text').attr('class', 'blue');
+                    $(this).addClass('input-error');
+                }
+                else {
+                    $(this).removeClass('input-error');
+                }
+            });
+            NProgress.start();
+            var username=$('#ipt_username').val();
+            var pwd=$('#ipt_pwd').val();
+            {#                var img=$('#ipt_img').val();#}
+            {#                 'img-verification':img,#}
+            $.post("/u/login",{'username':username,'pwd':pwd,'csrfmiddlewaretoken':csrftoken},
+                function (data){
+                    data=JSON.parse(data);
+                    if (data.status == "200") {
+                        $.gritter.add({
+                            // (string | mandatory) the heading of the notification
+                            title: '成功',
+                            // (string | mandatory) the text inside the notification
+                            text: data.msg,
+                            class_name: 'gritter-success'
+                        });
+                        location.href='/u/index';
+                    }
+                    else {
+                        $.gritter.add({
+                            // (string | mandatory) the heading of the notification
+                            title: '失败',
+                            // (string | mandatory) the text inside the notification
+                            text:data.status+'|'+ data.msg,
+                            class_name: 'gritter-warning'
+                        });
+                    }
+                    NProgress.done();
+                });
 
-				e.preventDefault();
-			 });
-			 $('#btn-login-blur').on('click', function(e) {
-				$('body').attr('class', 'login-layout blur-login');
-				$('#id-text2').attr('class', 'white');
-				$('#id-company-text').attr('class', 'light-blue');
+            e.preventDefault();
+        });
 
-				e.preventDefault();
-			 });
+        $.backstretch("/static/images/loginback.jpg");
 
-			});
-		</script>
-	</body>
+        $('.login-form input[type="text"], .login-form input[type="password"], .login-form textarea').on('focus', function() {
+            $(this).removeClass('input-error');
+        });
+
+    });
+</script>
+</body>
 </html>
