--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -204,10 +204,12 @@
                 </div>
                 <div class="col-md-4">
                     <h3>关注微信公众号</h3>
-                    <img src="/static/images/web/wechat.jpg" style="width: 160px;height:160px;">
-                    <h3 style="margin-top: 1em"><i class="icon-phone"></i><span style="margin-left: 5px;">(86)028-8263-9653</span></h3>
-                    <h3 style="margin-top: 1em"><i class="icon-mail"></i><span style="margin-left: 5px;">info@hexedu.com</span></h3>
-                    <h3 style="margin-top: 1em"><i class="icon-tux"></i><span style="margin-left: 5px;">微信工作号：Hengxinqiantu</span></h3>
+                    <img src="/static/images/web/wechat.jpg" style="width: 140px;height:140px;">
+                    <p><i class="icon-phone" style="margin-right: 5px;"></i>(86)028-8263-9653</p>
+                    <p><i class="icon-mail" style="margin-right: 5px;"></i>info@hexedu.com</p>
+                    <p><i class="icon-tux" style="margin-right: 5px;"></i>微信工作号：Hengxinqiantu</p>
+{#                    <h3 style="margin-top: 1em"><i class="icon-mail"></i><span style="margin-left: 5px;">info@hexedu.com</span></h3>#}
+{#                    <h3 style="margin-top: 1em"><i class="icon-tux"></i><span style="margin-left: 5px;">微信工作号：Hengxinqiantu</span></h3>#}
                 </div>
 
 
