--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -126,20 +126,20 @@
                 </div>
 
                 <div class="text-center col-xs-12" style="margin-top: 2em;">
-                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: 1em;" >
-                        <h1>如果你是</h1>
+                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: -1em;" >
+                        <h1 style="font-size: 30px;color: #59bcdb;">如果你是</h1>
                     </div>
                     <div class ="col-xs-12">
-                        <img src="/static/images/web/about/b2.png" alt="hexelite-恒心精英计划" style="width: 80%">
+                        <img src="/static/images/web/about/b2.png" alt="hexelite-招商合作" style="width: 80%">
                     </div>
-                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: 1em;" >
-                        <h1>我们能为你</h1>
+                    <div class="col-xs-12 text-center" style="margin-bottom: 1em;margin-top: 2em;" >
+                        <h1 style="font-size: 30px;color: #59bcdb;">我们能为你</h1>
                     </div>
                     <div class ="col-xs-12">
-                        <img src="/static/images/web/about/b1.png" alt="hexelite-恒心精英计划" style="width: 60%">
+                        <img src="/static/images/web/about/b1.png" alt="hexelite-招商合作" style="width: 60%">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" style="padding-top: 3em">
                     <div class="row">
                         <div class="col-xs-12 text-center" style="margin-bottom: 3em;margin-top: 3em;" >
                             <h1>恒心精英计划</h1>
